--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "jenssegers/mongodb": "^3.6",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^1.0"
+        "laravel/ui": "^1.0",
+        "morilog/jalali": "3.*"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
